<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chensi.exampl.activity.ITTestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject1"/>

    <RadioGroup
        android:id="@+id/rgSubject1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbSubject1_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject1_opt1"/>
        <RadioButton
            android:id="@+id/rbSubject1_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject1_opt2"/>

        <RadioButton
            android:id="@+id/rbSubject1_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject1_opt3"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject2"/>

    <RadioGroup
        android:id="@+id/rgSubject2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rbSubject2_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject2_opt1"/>
        <RadioButton
            android:id="@+id/rbSubject2_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject2_opt2"/>

        <RadioButton
            android:id="@+id/rbSubject2_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject2_opt3"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject3"/>

    <RadioGroup
        android:id="@+id/rgSubject3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbSubject3_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject3_opt1"/>
        <RadioButton
            android:id="@+id/rbSubject3_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject3_opt2"/>

        <RadioButton
            android:id="@+id/rbSubject3_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject3_opt3"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOn="声音开启"
        android:textOff="声音关闭"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOn="声音开启"
        android:textOff="声音关闭"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="2"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:stepSize="0.5"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    
</LinearLayout>
